assets/_form.sass
.ah-form
	@extend .form-horizontal

	*
		font-weight: inherit
		font-size: inherit

	.form-group
		margin-left: 30px
		margin-right: 30px
		margin-bottom: 15px
		.width-label
			@extend .col-xs-3
			width: 170px
			> *
				float: right
		.width-field-normal
			@extend .col-xs-7
			width: 400px
		.width-field-small
			@extend .col-xs-7
			width: 300px
		.width-field-large
			@extend .col-xs-7
			width: 600px
		.width-field-tooltip
			@extend .col-xs-2
			width: 24px

